--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -6,8 +6,14 @@
     justify-content: space-between;
     align-items: flex-start;
     font-family: $global-font;
+    width: 14vw;
 }
 
+.side-panel-parent {
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+}
 .side-panel-container1 {
     display: flex;
     flex-direction: column;
@@ -26,8 +32,6 @@
         display: flex;
         align-items: center;
         border: 1px solid #b0b0b0;
-        width: 150px;
-
         background: #e8e9ea;
         a {
             padding: 5px 4px 4px 10px;
@@ -41,4 +45,18 @@
 .btmImage {
     padding: 5px;
     border: 1px solid black;
+}
+
+.side-panel-container2 {
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+    h2 {
+        text-transform: capitalize;
+        font-family: $global-font;
+        font-weight: bold;
+    }
+    p {
+        font-size: 10px;
+    }
 }
