Hero Section,Footer

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -8,3 +8,129 @@
 }
 
 $global-font: Verdana, Geneva, Tahoma, sans-serif;
+.footer {
+  width: 100%;
+  background-color: rgb(0, 0, 0, 0.5);
+
+  p {
+    padding: 1vh 1vw;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    font-size: 12px;
+  }
+}
+.home-parent {
+  padding: 1vh 1vw;
+}
+
+.home-head {
+  display: flex;
+  flex-direction: column;
+  gap: 3vh;
+  h1 {
+    color: red;
+  }
+  img {
+    padding-left: 1vw;
+  }
+  h2 {
+    color: blue;
+  }
+  p {
+    font-size: 11px;
+    color: red;
+    font-weight: 100;
+
+    span {
+      font-weight: bold;
+      color: black;
+    }
+  }
+}
+
+.home-section2 {
+  padding: 2vh 1vw;
+  .home-section2-container {
+    display: flex;
+    gap: 2vw;
+  }
+  .home-section2-sub {
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+    p {
+      font-size: 11px;
+    }
+    h3 {
+      font-size: 11px;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+.home-section3 {
+  h2 {
+    color: blue;
+    padding: 2vh 0;
+  }
+  p {
+    font-size: 11px;
+  }
+  h3 {
+    font-size: 11px;
+    font-weight: bold;
+  }
+  form {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding-top: 1vh;
+    label {
+      font-size: 11px;
+    }
+    input {
+      border: 1px solid black;
+      height: 20px;
+    }
+    button {
+      border: 1px solid black;
+      font-size: 12px;
+      padding: 0 10px;
+      background-color: rgb(128, 128, 128, 0.2);
+    }
+  }
+  .home-google-groups {
+    font-weight: bold;
+    font-size: 11px;
+    padding-left: 20%;
+    a:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+.home-section4 {
+  padding-top: 2vh;
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
+  h2 {
+    color: red;
+  }
+  p {
+    font-size: 11px;
+    span {
+      font-weight: bold;
+      a:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
