--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -137,3 +137,12 @@
         font-weight: bold;
     }
 }
+
+//center section
+
+.hero-center {
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
+    margin: 1vw;
+}
