--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -6,7 +6,9 @@
     text-wrap: balance;
   }
 }
-
+body {
+  background-color: rgb(96, 96, 96, 0.2);
+}
 $global-font: Verdana, Geneva, Tahoma, sans-serif;
 .footer {
   width: 100%;
@@ -21,9 +23,6 @@ $global-font: Verdana, Geneva, Tahoma, sans-serif;
     gap: 5px;
     font-size: 12px;
   }
-}
-.home-parent {
-  padding: 1vh 1vw;
 }
 
 .home-head {
