--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -14,6 +14,7 @@
     flex-direction: column;
     gap: 2vh;
     width: 12vw;
+    color: #505050;
 }
 .side-panel-container1 {
     display: flex;
@@ -145,4 +146,6 @@
     height: 100%;
     border: 1px solid black;
     margin: 1vw;
+    background-color: white;
+    padding: 1vh 1vw;
 }
