--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -31,6 +31,9 @@
     flex-direction: column;
     gap: 1vh;
     li {
+        &:hover {
+            background-color: white;
+        }
         display: flex;
         align-items: center;
         border: 1px solid #b0b0b0;
@@ -41,7 +44,15 @@
             text-transform: uppercase;
             font-weight: bold;
             font-size: 10px;
+            width: 100%;
         }
+    }
+
+    .shows-true {
+        margin-left: 1vw;
+        display: flex;
+        flex-direction: column;
+        gap: 1vh;
     }
 }
 .btmImage {
