--- a/src/app/links/links.scss
+++ b/src/app/links/links.scss
@@ -10,7 +10,7 @@
         .links-container {
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            gap: 2vh;
             p {
                 font-size: 11px;
                 color: #505050;
@@ -31,25 +31,30 @@
     display: flex;
     flex-direction: column;
     gap: 2vh;
-
-    .links-section2-container {
-        display: flex;
-        flex-direction: column;
-        gap: 2vh;
-        h2 {
-            font-weight: bold;
-            color: #606060;
-            font-size: 18px;
-        }
-        p {
-            font-size: 11px;
-            color: #2a2a2a;
-        }
-        span {
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
+}
+.links-section2-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+    h2 {
+        font-weight: bold;
+        color: #606060;
+        font-size: 18px;
     }
+    p {
+        font-size: 11px;
+        color: #2a2a2a;
+    }
+    span {
+        font-weight: bold;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+}
+
+.links-head-head {
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
 }
