--- a/src/app/podcasts/podcasts.scss
+++ b/src/app/podcasts/podcasts.scss
@@ -12,7 +12,8 @@
         color: #2a2a2a;
     }
 
-    a {
+    a,
+    span {
         color: #2a2a2a;
         font-weight: bold;
         font-size: 11px;
